Completed video landing page HTML & CSS

--- a/CSS & HTML/Video Landing Page/index.html
+++ b/CSS & HTML/Video Landing Page/index.html
@@ -5,12 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />        <title>Video Landing Page</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+        <link rel="stylesheet" href="style.css">
+        <title>Video Landing Page</title>
     </head>
     <body>
         <section class="showcase">
             <div class="video-container">
-                <video src="video.mov" autoplay muted loop></video>
+                <video src="Pexels_2711134.mp4" autoplay muted loop></video>
             </div>
             <div class="content">
                 <h1>Embrace The Journey</h1>
@@ -24,7 +26,13 @@
             <p> 
                 Landing page project for 100 days of code
             </p>
-            <h2>Watch the journey.</h2>
+            <br>
+            <h2>Watch the journey unfold.</h2>
+            
+            <div class="social">
+                <a href="https://github.com" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+                <a href="http://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+            </div>
 
         </section>
         
