--- a/CSS & HTML/Blog_Cards/index.html
+++ b/CSS & HTML/Blog_Cards/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <title>Blog Cards</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <div class="container">
