--- a/CSS & HTML/Animated_Counter/index.html
+++ b/CSS & HTML/Animated_Counter/index.html
@@ -1,8 +1,7 @@
+<!-- Credit: This project is based on a tutorial from Traversy Media's Youtube page -->
+<!-- https://www.youtube.com/watch?v=a6XIMIKmj9k&list=PLHezTAVBPWVM3vwd-GY8907IsryL5zYYm&index=19  -->
+
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
