Finished Login project

--- a/CSS & HTML/Login/index.html
+++ b/CSS & HTML/Login/index.html
@@ -1,8 +1,10 @@
+<!-- Based on a tutorial from Traversy Media https://www.youtube.com/watch?v=6EajwhCNLfc&list=PLHezTAVBPWVM3vwd-GY8907IsryL5zYYm&index=6-->
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Animated Counter</title>
+        <title>Login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -27,6 +29,7 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Password">
                 </div>
+
                 <div class="checkbox-conatiner">
                     <input type="checkbox" id = "remember">
                     <label for="remember">Remember me</label>
@@ -37,8 +40,28 @@
                 <button class="btn">Log In</button>
                 
                 <small>Don't have an account? <a href="#">Sign up</a></small>
-        </form>
-        </div>
+                
+            </form>
 
+            <div class="features">
+                <div class="feature">
+                    <i class="fas fa-code"></i>
+                    <h3>Development</h3>
+                    <p>Develop or solidify your skills with over 50 high quality projects to choose from.</p>
+                </div>
+
+                <div class="feature">
+                    <i class="fas fa-gift"></i>
+                    <h3>Features</h3>
+                    <p>A modern and clean design system for developing fast and powerful web interfaces</p>
+                </div>
+
+                <div class="feature">
+                    <i class="fas fa-edit"></i>
+                    <h3>Updates</h3>
+                    <p>New courses and content regularly added</p>
+                </div>
+            </div>
+        </div>
     </body>
     </html>
