Finished Ads Project

--- a/CSS & HTML/Ads_manager/index.html
+++ b/CSS & HTML/Ads_manager/index.html
@@ -11,6 +11,16 @@
     </head>
     <body>
         <div class="container">
+            <div class="title">Our Little Angels Baby Store</div>
+            <div class="edit-results">
+                <div class= search-bar>
+                    <i class="fas fa-search"></i>
+                    <input class="search" type = "search" id="search" placeholder="Search">
+                </div>
+                <div class= filter-bar>
+                    <input class="filter" type = "search" id="filter" placeholder="Filter">
+                </div>
+            </div>
             <table>
                 <thead>
                     <tr>
@@ -29,32 +39,36 @@
                         <td>184</td>
                         <td><button class="delete"><i class="fas fa-trash"></i></button></td>
                     </tr>
-                    <tr class="priority-200">
+                    <tr class="priority-500">
                         <td>Cribs</td>
                         <td>946</td>
                         <td><i class="fas fa-circle"></i>500</td>
                         <td>220</td>
                         <td><button class="delete"><i class="fas fa-trash"></i></button></td>
-                    </tr>                    <tr class="priority-200">
+                    </tr>                    
+                    <tr class="priority-400">
                         <td>Strollers</td>
                         <td>639</td>
                         <td><i class="fas fa-circle"></i>400</td>
                         <td>160</td>
                         <td><button class="delete"><i class="fas fa-trash"></i></button></td>
-                    </tr>                    <tr class="priority-200">
+                    </tr>                    
+                    <tr class="priority-200">
                         <td>Baby Books</td>
                         <td>496</td>
                         <td><i class="fas fa-circle"></i>200</td>
                         <td>290</td>
                         <td><button class="delete"><i class="fas fa-trash"></i></button></td>
-                    </tr>                    <tr class="priority-200">
+                    </tr>                    
+                    <tr class="priority-400">
                         <td>Blankets</td>
                         <td>821</td>
                         <td><i class="fas fa-circle"></i>400</td>
                         <td>325</td>
                         <td><button class="delete"><i class="fas fa-trash"></i></button></td>
                     </tr>
-                    </tr>                    <tr class="priority-200">
+                    </tr>                    
+                    <tr class="priority-800">
                         <td>Toys</td>
                         <td>1462</td>
                         <td><i class="fas fa-circle"></i>800</td>
@@ -63,7 +77,6 @@
                     </tr>
                 </tbody>
             </table>
-
         </div>
     </body>
 </html>
