Working on Microsoft clone nav bar

--- a/CSS & HTML/Microsoft Clone/index.html
+++ b/CSS & HTML/Microsoft Clone/index.html
@@ -2,12 +2,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Login</title>
+        <title>Microsoft Official Homepage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     </head>
     <body>
+        <div class="container">
+            <!-- Nav-->
+            <nav class="main-nav">
+                <img src="img/logo.png" alt="Microsoft" class="logo">
+                <ul class="main-menu">
+                    <li><a href="#"></a>Office</li>
+                    <li><a href="#"></a>Windows</li>
+                    <li><a href="#"></a>Surface</li>
+                    <li><a href="#"></a>Xbox</li>
+                    <li><a href="#"></a>Deals</li>
+                    <li><a href="#"></a>Support</li>
+                </ul>
+
+                <ul class="right-menu">
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-search"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-shopping-cart"></i>
+                        </a>
+                    </li>
+                    
+                </ul>
+            </nav>
+        </div>
 
         <script src="" async defer></script>
     </body>
