--- a/CSS & HTML/Microsoft Clone/index.html
+++ b/CSS & HTML/Microsoft Clone/index.html
@@ -35,6 +35,22 @@
                     
                 </ul>
             </nav>
+
+            <!-- Showcase -->
+            <header class="showcase">
+                <h2>Surface Deals</h2>
+                <p2>
+                    Select Surface are on sale now - save while supplies last
+                </p2>
+                <a href="#" class="btn">
+                    Shop Now <i class="fas fa-chevron-right"></i>
+                </a>
+            </header>
+
+            <!-- Home cards 1-->
+            
+
+
         </div>
 
         <script src="" async defer></script>
