--- a/CSS & HTML/Microsoft Clone/index.html
+++ b/CSS & HTML/Microsoft Clone/index.html
@@ -119,9 +119,79 @@
                             <a href="#" class="btn">Learn More<i class="fas fa-chevron-right"></i></a>
                         </div>
                     </section>
+                    <!-- Follow -->
+                    <section class="follow">
+                        <p>Follow Microsoft</p>
+                        <a href= "#"><img src="img/social-fb.png"></a>
+                        <a href="#"><img src="img/social-twitter.png"></a>
+                        <a href="#"><img src="img/social-linkedin.png"></a>
+                    </section>
+        </div>
+        <!-- Links -->
+        <section class="links">
+            <div class="links-inner">
+                <ul>
+                    <li><h3>What's New</h3></li>
+                    <li><a href="#">Surface Pro X</a></li>
+                    <li><a href="#">Surface Laptop 3</a></li>
+                    <li><a href="#">Surface Pro 7</a></li>
+                    <li><a href="#">Windows 10 apps</a></li>
+                    <li><a href="#">Office apps</a></li>
+                    <li><a href="#">HoloLens</a></li>
+                </ul>
 
+                <ul>
+                    <li><h3>Microsoft Store</h3></li>
+                    <li><a href="#">Account Profile</a></li>
+                    <li><a href="#">Download Center</a></li>
+                    <li><a href="#">Microsoft Store Support</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Order Tracking</a></li>
+                    <li><a href="#">Virtual workshops and training</a></li>
+                    <li><a href="#">Mircosoft Store Promise</a></li>
+                    <li><a href="#">Financing</a></li>
+                </ul>
 
+                <ul>
+                    <li><h3>Education</h3></li>
+                    <li><a href="#">Microsoft in Education</a></li>
+                    <li><a href="#">Office for students</a></li>
+                    <li><a href="#">Office 365 for schools</a></li>
+                    <li><a href="#">Deals for students & parents</a></li>
+                    <li><a href="#">Microsoft Azure</a></li>
+                </ul>
+                <ul>
+                    <li><h3>Enterprise</h3></li>
+                    <li><a href="#">Azure</a></li>
+                    <li><a href="#">AppSource</a></li>
+                    <li><a href="#">Automotive</a></li>
+                    <li><a href="#">Government</a></li>
+                    <li><a href="#">Healthcare</a></li>
+                </ul>
+                <ul>
+                    <li><h3>Developer</h3></li>
+                    <li><a href="#">Microsoft Visual Studio</a></li>
+                    <li><a href="#">Windows Dev Center</a></li>
+                    <li><a href="#">Developer Center</a></li>
+                    <li><a href="#">Microsoft developer programme</a></li>
+                    <li><a href="#">Channel 9</a></li>
+                    <li><a href="#">Office Dev Center</a></li>
+                    <li><a href="#">Microsoft Garbage</a></li>
+                </ul>
+                <ul>
+                    <li><h3>Company</h3></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">About Microsoft</a></li>
+                    <li><a href="#">Company news</a></li>
+                    <li><a href="#">Privacy at Microsoft</a></li>
+                    <li><a href="#">Investors</a></li>
+                    <li><a href="#">Diversity and Inclusion</a></li>
+                    <li><a href="#">Accessibilty</a> </li>
+                    <li><a href="#">Security</a></li>
+                </ul>
             </div>
+        </section>
+
         <script src="" async defer></script>
     </body>
 </html>
