--- a/CSS & HTML/Microsoft Clone/index.html
+++ b/CSS & HTML/Microsoft Clone/index.html
@@ -191,6 +191,25 @@
                 </ul>
             </div>
         </section>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer-inner">
+                <div>
+                    <i class="fas fa-globe fa-2x"></i>
+                    English(United Kingdom)
+                </div>
+                <ul>
+                    <li><a href="#">Sitemap</a></li>
+                    <li><a href="#">Contact Microsoft</a></li>
+                    <li><a href="#">Privacy & cookies</a></li>
+                    <li><a href="#">Terms of use</a></li>
+                    <li><a href="#">Trademarks</a></li>
+                    <li><a href="#">Safety & eco</a></li>
+                    <li><a href="#">About our ads</a></li>
+                    <li><a href="#">&copy; Microsoft 2021</a></li>
+                </ul>
+            </div>
+        </footer>
 
         <script src="" async defer></script>
     </body>
