--- a/CSS & HTML/Creative_website/index.html
+++ b/CSS & HTML/Creative_website/index.html
@@ -10,17 +10,52 @@
     <body>
         <header>
             <div class="logo">Creative Agency</div>
-            <div class="toggle"></div>
+            <div class="toggle active"></div>
             <div class="navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="work.html">Work</a></li>
-                    <li><a href="contact.html"></a>/li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <div class="social-bar">
+                    <ul>
+                        <li>
+                            <a href="https://facebook.com">
+                                <img src="images/facebook.png"
+                                target="_blank" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com">
+                                <img src="images/twitter.png"
+                                target="_blank" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://instagram.com">
+                                <img src="images/instagram.png"
+                                target="_blank" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                    <a href="mailto:you@email.com" class="email-icon">
+                        <img src="images/email.png" alt="" />
+                    </a>
+                </div>
             </div>
-
         </header>
+        <section>
+            <img src="images/home-img.jpeg" class="home-img" alt="">
+            <div class="home-content">
+                <h1>We help to achieve <br> your goals.</h1>
+            
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem enim error earum numquam doloribus voluptate mollitia velit quos! Et, obcaecati adipisci at excepturi sit dolorum eligendi voluptatibus nam temporibus. Adipisci voluptate impedit ullam distinctio, soluta cum. Maiores autem labore nostrum.
+                </p>
+                <a href= "contact.html" class='btn'>Get Started</a>
+        </div>
+        </section>
     
         <script src="" async defer></script>
     </body>
