Creative agency project: setting up services page.

--- a/CSS & HTML/Creative_website/contact.html
+++ b/CSS & HTML/Creative_website/contact.html
@@ -45,16 +45,8 @@
                 </div>
             </div>
         </header>
-        <section class="home">
-            <img src="images/home-img.jpeg" class="home-img" alt="">
-            <div class="home-content">
-                <h1>We help to achieve <br> your goals.</h1>
-            
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem enim error earum numquam doloribus voluptate mollitia velit quos! Et, obcaecati adipisci at excepturi sit dolorum eligendi voluptatibus nam temporibus. Adipisci voluptate impedit ullam distinctio, soluta cum. Maiores autem labore nostrum.
-                </p>
-                <a href= "contact.html" class='btn'>Get Started</a>
-        </div>
+        <section>
+            <h1> Contact</h1>
         </section>
     
         <script src="script.js" async defer></script>
