Creative Agency website: added completed work.html page and it's corresponding css.

--- a/CSS & HTML/Creative_website/services.html
+++ b/CSS & HTML/Creative_website/services.html
@@ -50,7 +50,7 @@
                 <h1> Services that we can help you with</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est totam nisi aliquid, harum, alias necessitatibus, corrupti dolor aliquam neque voluptatum quis cum. Nostrum id mollitia delectus, quis eos eveniet. Temporibus iste facere ex soluta natus repellendus deleniti porro aperiam. Voluptates.</p>
             </div>
-            <div class="service">
+            <div class="services">
                 <div class="service">
                     <div class="icon">
                         <img src="images/001.png" alt="" />
@@ -58,8 +58,6 @@
                     <h2> Design</h2>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate aspernatur tempora quibusdam nisi sunt iste animi harum ratione aperiam tempore?
                 </div>
-            </div>
-            <div class="service">
                 <div class="service">
                     <div class="icon">
                         <img src="images/002.png" alt="" />
@@ -67,8 +65,6 @@
                     <h2> Development</h2>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate aspernatur tempora quibusdam nisi sunt iste animi harum ratione aperiam tempore?
                 </div>
-            </div>
-            <div class="service">
                 <div class="service">
                     <div class="icon">
                         <img src="images/003.png" alt="" />
@@ -76,8 +72,6 @@
                     <h2> SEO</h2>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate aspernatur tempora quibusdam nisi sunt iste animi harum ratione aperiam tempore?
                 </div>
-            </div>
-            <div class="service">
                 <div class="service">
                     <div class="icon">
                         <img src="images/004.png" alt="" />
@@ -85,8 +79,6 @@
                     <h2> Marketing</h2>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate aspernatur tempora quibusdam nisi sunt iste animi harum ratione aperiam tempore?
                 </div>
-            </div>
-            <div class="service">
                 <div class="service">
                     <div class="icon">
                         <img src="images/005.png" alt="" />
@@ -94,8 +86,6 @@
                     <h2> App Development</h2>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate aspernatur tempora quibusdam nisi sunt iste animi harum ratione aperiam tempore?
                 </div>
-            </div>
-            <div class="service">
                 <div class="service">
                     <div class="icon">
                         <img src="images/006.png" alt="" />
