--- a/CSS & HTML/Creative_website/work.html
+++ b/CSS & HTML/Creative_website/work.html
@@ -46,7 +46,84 @@
             </div>
         </header>
         <section>
-            <h1> Work</h1>
+            <div class="title">
+                <h1>Some of our finest work</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est totam nisi aliquid, harum, alias necessitatibus, corrupti dolor aliquam neque voluptatum quis cum. Nostrum id mollitia delectus, quis eos eveniet. Temporibus iste facere ex soluta natus repellendus deleniti porro aperiam. Voluptates.</p>
+            </div>
+            <div class="portfolio">
+                <div class="item">
+                    <img src="images/portfolio-item1.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item2.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item3.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item4.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item5.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item6.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item7.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item8.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item9.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item10.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item11.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/portfolio-item12.jpeg" alt="" />
+                    <div class="action">
+                        <a href="#">Launch</a>
+                    </div>
+                </div>
+            </div>
         </section>
     
         <script src="script.js" async defer></script>
